--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -24,8 +25,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "App/Driver/database",
-            "App/Driver/tests"
+            
         ]
     },
     "scripts": {
