--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "App/",
-            "Melisa\\": "Melisa/"
+            "Melisa\\": "Melisa/",
+            "Psr\\": "Psr/"
         }
     },
     "autoload-dev": {
