--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "predis/predis": "~1.0",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "tecnickcom/tcpdf": "6.2.12"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
