--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "predis/predis": "~1.0",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "tecnickcom/tcpdf": "6.2.12"
+        "tecnickcom/tcpdf": "6.2.12",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
