--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "waavi/sanitizer": "~1.0",
         "intervention/image": "^2.3",
-        "jenssegers/mongodb": "^3.2"
+        "jenssegers/mongodb": "^3.2",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
