--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,32 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "laravel/framework": "5.5.*",
-        "predis/predis": "~1.0",
-        "mobiledetect/mobiledetectlib": "^2.8",
-        "tecnickcom/tcpdf": "6.2.12",
+        "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
-        "waavi/sanitizer": "~1.0",
         "intervention/image": "^2.3",
         "jenssegers/mongodb": "^3.2",
-        "doctrine/dbal": "^2.5",
-        "maatwebsite/excel": "~2.1.0"
+        "laravel/framework": "5.6.*",
+        "laravel/passport": "^5.0",
+        "maatwebsite/excel": "~2.1.0",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "optimus/api-consumer": "^0.2.3",
+        "predis/predis": "~1.0",
+        "tecnickcom/tcpdf": "6.2.12",
+        "waavi/sanitizer": "~1.0"
     },
     "require-dev": {
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^3.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "~7.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "filp/whoops": "~2.0"
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
-            "Melisa\\": "Melisa/",
-            "Psr\\": "Psr/"
+            "Melisa\\": "Melisa/"
         }
     },
     "autoload-dev": {
